--- a/allproducts.html
+++ b/allproducts.html
@@ -36,6 +36,90 @@
       </div>
     </header>
 
+    <section class="container cs">
+      <div>
+        <h4>Products</h4>
+        <p>loremm snhjdsnmcbjhgjhbnmcbmda</p>
+      </div>
+
+      <div class="prd_list">
+        <div class="products">
+          <h4>wedding cake</h4>
+          <p>#Birthdays</p>
+          <img
+            src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png"
+            alt=""
+          />
+          <div class="pricing">
+            <h4>$5000</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="products">
+          <h4>fundant cake</h4>
+          <p>#Birthdays</p>
+          <img
+            src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png"
+            alt=""
+          />
+          <div class="pricing">
+            <h4>$8000</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="products">
+          <h4>Birthday Cake</h4>
+          <p>#creamy</p>
+          <img
+            src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png"
+            alt=""
+          />
+          <div class="pricing">
+            <h4>$2000</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="products">
+          <h4>cheese Cake</h4>
+          <p>#ice cream</p>
+          <img
+            src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png"
+            alt=""
+          />
+          <div class="pricing">
+            <h4>$6000</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="products">
+          <h4>Butter Cake</h4>
+          <p>#sugar icing</p>
+          <img
+            src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png"
+            alt=""
+          />
+          <div class="pricing">
+            <h4>$7000</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="products">
+          <h4>slice cake</h4>
+          <p>#red velvet</p>
+          <img src="./images/images/torte-wedding-cake.jpg" alt="" />
+          <div class="pricing">
+            <h4>$300</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="container">
         <div class="foot">
