--- a/allproducts.html
+++ b/allproducts.html
@@ -117,6 +117,66 @@
             <button class="button2">Add to cart</button>
           </div>
         </div>
+
+        <div class="products">
+          <h4>slice cake</h4>
+          <p>#red velvet</p>
+          <img src="./images/images/torte-wedding-cake.jpg" alt="" />
+          <div class="pricing">
+            <h4>$300</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="products">
+          <h4>slice cake</h4>
+          <p>#red velvet</p>
+          <img src="./images/images/torte-wedding-cake.jpg" alt="" />
+          <div class="pricing">
+            <h4>$300</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="products">
+          <h4>slice cake</h4>
+          <p>#red velvet</p>
+          <img src="./images/images/torte-wedding-cake.jpg" alt="" />
+          <div class="pricing">
+            <h4>$300</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="products">
+          <h4>slice cake</h4>
+          <p>#red velvet</p>
+          <img src="./images/images/torte-wedding-cake.jpg" alt="" />
+          <div class="pricing">
+            <h4>$300</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="products">
+          <h4>slice cake</h4>
+          <p>#red velvet</p>
+          <img src="./images/images/torte-wedding-cake.jpg" alt="" />
+          <div class="pricing">
+            <h4>$300</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="products">
+          <h4>slice cake</h4>
+          <p>#red velvet</p>
+          <img src="./images/images/torte-wedding-cake.jpg" alt="" />
+          <div class="pricing">
+            <h4>$300</h4>
+            <button class="button2">Add to cart</button>
+          </div>
+        </div>
       </div>
     </section>
 
