added one seacrh featuer like that

--- a/allproducts.html
+++ b/allproducts.html
@@ -36,6 +36,12 @@
       </div>
     </header>
 
+    <section class="container">
+      <div class="st">
+        <input class="search" type="text" placeholder="search products" />
+      </div>
+    </section>
+
     <section class="container cs">
       <div>
         <h4>Products</h4>
