--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="herosection">
         <h1>"Creating Sweet Memories,</h1>
 
-        <img class="heroimg" src="./images/herosection.png" alt="">
+        <img class="heroimg" src="./images/images/herosection.png" alt="">
 
         <h1>One Cake at a Time!"</h1>
         
