--- a/About.html
+++ b/About.html
@@ -14,20 +14,23 @@
       </div>
       <div>
         <!-- HTML markup for the navigation bar -->
-        <ul class="navbar">
-          <li><a href="#">Home</a></li>
-          <li><a href="./About.html">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
+        <div class="menu">
+            <div>
+            <ul class="navbar">
+              <li><a href="#">Home</a></li>
+              <li><a href="./About.html">About</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
 
-      <div>
-        <ul class="navbar">
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Logout</a></li>
-        </ul>
-      </div>
+          <div>
+            <ul class="navbar">
+              <li><a href="#">Login</a></li>
+              <li><a href="#">Logout</a></li>
+            </ul>
+          </div>
+        </div>
 
       <div class="hamburger">
         <div class="line"></div>
