--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
               </ul>
               
         
-
+      <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
 </header>
 <main>
     <section class="herosection">
