--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
               <li><a href="./About.html">About</a></li>
               <li><a href="./allproducts.html">Products</a></li>
               <li><a href="/contact.html">Contact</a></li>
-              <li><a href="#">Login</a></li>
-              <li><a href="#">Logout</a></li>
+              <li><a href="./login.html">Login</a></li>
+              <li><a href="./logout.html">Logout</a></li>
               </ul>
               
         
