--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="products">
                     <h4>wedding cake</h4>
                     <p>#Birthdays</p>
-                    <img src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png" alt="">
+                    <img src="./images/images/ckk.png" alt="">
                     <div class="pricing">
                         <h4>$5000</h4>
                         <button class="button2">Add to cart</button>
@@ -126,7 +126,7 @@
                 <div class="products">
                     <h4>fundant cake</h4>
                     <p>#Birthdays</p>
-                    <img src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png" alt="">
+                    <img src="./images/images/2.png" alt="">
                     <div class="pricing">
                         <h4>$8000</h4>
                         <button class="button2">Add to cart</button>
@@ -136,7 +136,7 @@
                 <div class="products">
                     <h4>Birthday Cake</h4>
                     <p>#creamy </p>
-                    <img src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png" alt="">
+                    <img src="./images/images/ck3.jpg" alt="">
                     <div class="pricing">
                         <h4>$2000</h4>
                         <button class="button2">Add to cart</button>
@@ -146,7 +146,7 @@
                 <div class="products">
                     <h4>cheese Cake</h4>
                     <p>#ice cream</p>
-                    <img src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png" alt="">
+                    <img src="./images/images/ck4.jpg" alt="">
                     <div class="pricing">
                         <h4>$6000</h4>
                         <button class="button2">Add to cart</button>
@@ -156,7 +156,7 @@
                 <div class="products">
                     <h4>Butter Cake</h4>
                     <p>#sugar icing</p>
-                    <img src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png" alt="">
+                    <img src="./images/images/22.png" alt="">
                     <div class="pricing">
                         <h4>$7000</h4>
                         <button class="button2">Add to cart</button>
@@ -166,7 +166,7 @@
                 <div class="products">
                     <h4>slice cake</h4>
                     <p>#red velvet</p>
-                    <img src="./images/images/torte-wedding-cake.jpg" alt="">
+                    <img src="./images/images/ck6.png" alt="">
                     <div class="pricing">
                         <h4>$300</h4>
                         <button class="button2">Add to cart</button>
