--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,45 @@
       </div>
 </header>
 
+<main>
+  <section class="container">
+        <div class="contact">
+          <div class="top1">
+            <h2 class="color1">Would you like to reach out to us?</h2>
+            <p>Send a Message</p>
+          </div>
+
+          <form action="">
+            <div class="form-sections">
+              <div class="form-div">
+                <label for="name" class="color1">Your Name</label>
+                <input type="text" placeholder="Enter your name" />
+              </div>
+              <div class="form-div">
+                <label for="name" class="color1">Email Address</label>
+                <input type="text" placeholder="Enter your email address" />
+              </div>
+            </div>
+            <div class="form-sections">
+              <div class="form-div">
+                <label for="name" class="color1">Your Name</label>
+                <input type="text" placeholder="Enter your name" />
+              </div>
+              <div class="form-div">
+                <label for="name" class="color1">Email Address</label>
+                <input type="text" placeholder="Enter your email address" />
+              </div>
+            </div>
+            <div class="form-div">
+              <label for="message" class="color1">What's your message</label>
+              <textarea name="" id="" cols="30" rows="10"></textarea>
+            </div>
+
+            <button class="button1 mgtp">Submit</button>
+          </form>
+        </div>
+      </section>
+</main>
 
 
 
