--- a/singleproduct.html
+++ b/singleproduct.html
@@ -39,25 +39,25 @@
       <div class="prod__img">
         <div class="grp__img">
           <figure class="img__extra">
-            <img src="./images/images/Rectangle 92-1.png" alt="" />
+            <img src="./images/images/22.png" alt="" />
           </figure>
 
           <figure class="img__extra">
-            <img src="./images/images/Rectangle 92-3.png" alt="" />
+            <img src="./images/images/22.png" alt="" />
           </figure>
 
           <figure class="img__extra">
-            <img src="./images/images/Rectangle 92-3.png" alt="" />
+            <img src="./images/images/22.png" alt="" />
           </figure>
 
           <figure class="img__extra">
-            <img src="./images/images/Rectangle 92.png" alt="" />
+            <img src="./images/images/22.png" alt="" />
           </figure>
         </div>
 
         <div>
           <figure class="prd__main">
-            <img src="./images/images/Rectangle 92-3.png" alt="" />
+            <img src="./images/images/22.png" alt="" />
           </figure>
         </div>
       </div>
@@ -150,10 +150,7 @@
         <div class="products">
           <h4>wedding cake</h4>
           <p>#Birthdays</p>
-          <img
-            src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png"
-            alt=""
-          />
+          <img src="./images/images/ck3.jpg" alt="" />
           <div class="pricing">
             <h4>$5000</h4>
             <button class="button2">Add to cart</button>
@@ -163,10 +160,7 @@
         <div class="products">
           <h4>fundant cake</h4>
           <p>#Birthdays</p>
-          <img
-            src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png"
-            alt=""
-          />
+          <img src="./images/images/ck3.jpg" alt="" />
           <div class="pricing">
             <h4>$8000</h4>
             <button class="button2">Add to cart</button>
@@ -176,10 +170,7 @@
         <div class="products">
           <h4>Birthday Cake</h4>
           <p>#creamy</p>
-          <img
-            src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png"
-            alt=""
-          />
+          <img src="./images/images/ck3.jpg" alt="" />
           <div class="pricing">
             <h4>$2000</h4>
             <button class="button2">Add to cart</button>
@@ -189,10 +180,7 @@
         <div class="products">
           <h4>cheese Cake</h4>
           <p>#ice cream</p>
-          <img
-            src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png"
-            alt=""
-          />
+          <img src="./images/images/ck3.jpg" alt="" />
           <div class="pricing">
             <h4>$6000</h4>
             <button class="button2">Add to cart</button>
@@ -202,10 +190,7 @@
         <div class="products">
           <h4>Butter Cake</h4>
           <p>#sugar icing</p>
-          <img
-            src="./images/images/pngtree-birthday-cake-candles-celebration-transparent-png-image_9116317.png"
-            alt=""
-          />
+          <img src="./images/images/ck3.jpg" alt="" />
           <div class="pricing">
             <h4>$7000</h4>
             <button class="button2">Add to cart</button>
@@ -215,7 +200,7 @@
         <div class="products">
           <h4>slice cake</h4>
           <p>#red velvet</p>
-          <img src="./images/images/torte-wedding-cake.jpg" alt="" />
+          <img src="./images/images/ck3.jpg" alt="" />
           <div class="pricing">
             <h4>$300</h4>
             <button class="button2">Add to cart</button>
